versions/0.46/com.metreeca.spec/references/spec-language.md
---
title:      Specification Language Reference
excerpt:    Linked data model specification language semantics and components
tags:       Reference
module:     "Metreeca Shapes Engine"
version:    "0.46"
---

Most platform services are driven by declarative linked data models defined using a [SHACL](https://www.w3.org/TR/shacl/)-based [shape](#shapes) specification language.

Models are built either [interactively](../../com.metreeca.data/tutorials/linked-data-modelling/) or [programmaticaly](../apidocs/index.html) and automate a range of different tasks in the lifecycle of linked data REST APIs.

| task                | shape role                               |
| ------------------- | ---------------------------------------- |
| data selection      | RDF data retrieved from [readable](../../com.metreeca.data/tutorials/linked-data-development/#read-operations) linked data REST APIs is selected from the underlying graph storage layer by SPARQL queries derived from the associated linked data models |
| data validation     | RDF data submitted to [writable](../../com.metreeca.data/tutorials/linked-data-development/#write-operations) linked data REST APIs on resource creation and updating is automatically validated against the associated linked data models |
| faceted search      | [faceted search](../../com.metreeca.data/tutorials/linked-data-development/#faceted-search) and ancillary facet-populating queries are managed by the system on the basis of structural and typing constraints specified in linked data models associated with target linked data REST APIs |
| dynamic UI building | Interactive linked data navigators and editing forms are dynamically created and laid out according to the linked data models associated with linked data REST APIs |
| API documentation   | Human and machine readable docs for linked data REST APIs are dynamically derived from associated linked data models and published as hypertexts and [OpenAPI](https://www.openapis.org)/[Swagger](https://swagger.io/specification/) specs |
| data ingestion      | RDF data ingested from external data sources is dynamicaly mapped to and validated against the linked data models associated with target RDF graphs |

<p class="warning">The details of the specification language are still in flux, especially when it comes to focus shifting operators and SHACL interoperability.</p>

<p class="warning">Some of the described features aren't yet fully supported by the platform.</p>

# Shapes

Linked data [shapes](../apidocs/com/metreeca/spec/Shape.html) define the expected structure of RDF resource descriptions in terms of **constraints** imposed on members of a **focus set** of RDF terms and on the  values of their RDF properties.

**Primitive** shapes specify declarative constraints to be meet by the focus set and its member terms. **Composite** shapes recursively assemble other shapes into tree-structured complex constraints.

Linked data validation tasks verify that the RDF description of an initial focus set is consistent with the constraints specified by a possibly composite shape. During the process, derived focus sets generated by [focus shifting operators](#shifts) may be recursively validated. Validation results are reported as structured [validation report](../apidocs/com/metreeca/spec/Trace.html).

Linked data selection tasks identify the set of subjects in an RDF graph whose RDF descriptions are consistent with a possibly composite shape. Selection results are reported either as an RDF graph or a structured report according to the choosen [query](#queries) type.

<p class="warning">Some shapes aren't yet supported in the interactive <a href="../../com.metreeca.data/tutorials/linked-data-modelling/#editing-port-models">shape editor</a>.</p>

## Term Constraints

Primitive shapes specifying constraints to be individually met by each RDF term in the focus set.

| shape                                    | constraint                               |
| :--------------------------------------- | :--------------------------------------- |
| [datatype](../apidocs/com/metreeca/spec/shapes/Datatype.html)([IRI](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/IRI.html)) | each term in the focus set has a given extended RDF datatype IRI; IRI references and blank nodes are considered to be respectively of `http://www.openrdf.org/schema/sesame#iri` ([Values.IRI](../../com.metreeca.jeep/apidocs/com/metreeca/jeep/rdf/Values.html#IRI)) and `http://www.openrdf.org/schema/sesame#bnode` ([Values.BNode](../../com.metreeca.jeep/apidocs/com/metreeca/jeep/rdf/Values.html#BNode)) datatype |
| [class](../apidocs/com/metreeca/spec/shapes/Clazz.html)([IRI](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/IRI.html)) | each term in the focus set is an instance of a given RDF class or one of its superclasses |
| [minExclusive](../apidocs/com/metreeca/spec/shapes/MinExclusive.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html)) | each term in the focus set is strictly greater than a given minum value, according to <a href="https://www.w3.org/TR/2013/REC-sparql11-query-20130321/#modOrderBy">SPARQL ordering</a> rules |
| [maxExclusive](../apidocs/com/metreeca/spec/shapes/MaxExclusive.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html)) | each term in the focus set is strictly less than a given maximum value, according to <a href="https://www.w3.org/TR/2013/REC-sparql11-query-20130321/#modOrderBy">SPARQL ordering</a> rules |
| [minInclusive](../apidocs/com/metreeca/spec/shapes/MinInclusive.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html)) | each term in the focus set is greater than or equal to a given minimum value, according to <a href="https://www.w3.org/TR/2013/REC-sparql11-query-20130321/#modOrderBy">SPARQL ordering</a> rules |
| [maxInclusive](../apidocs/com/metreeca/spec/shapes/MaxInclusive.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html)) | each term in the focus set is less than or equal to a given maximum value, according to <a href="https://www.w3.org/TR/2013/REC-sparql11-query-20130321/#modOrderBy">SPARQL ordering</a> rules |
| [minLength](../apidocs/com/metreeca/spec/shapes/MinLength.html)(length) | the length of the lexical representation of each term in the focus set is greater than or equal to the given minimum value |
| [maxLength](../apidocs/com/metreeca/spec/shapes/MaxLength.html)(length) | the length of the lexical representation of each term in the focus set is less than or equal to the given maximum value |
| [pattern](../apidocs/com/metreeca/spec/shapes/Pattern.html)("pattern") | the lexical representation of each term in the focus set matches a given [regular expression](https://docs.oracle.com/javase/8/docs/api/java/util/regex/Pattern.html#sum) pattern |
| [like](../apidocs/com/metreeca/spec/shapes/Like.html)("keywords") | the lexical representation of each term in the focus set matches the given full-text keywords |
| [custom](../apidocs/com/metreeca/spec/shapes/Custom.html)("SPARQL") | each term in the focus set meets a custom constraint, defined as a *select* SPARQL query |

## Set Constraints

Primitive shapes specifying constraints to be collectively met by the RDF terms in the focus set.

| shape                                    | constraint                               |
| :--------------------------------------- | :--------------------------------------- |
| [minCount](../apidocs/com/metreeca/spec/shapes/MinCount.html)(count) | the size of the focus set is greater than or equal to the given minimum value |
| [maxCount](../apidocs/com/metreeca/spec/shapes/MaxCount.html)(count) | the size of the focus set is less than or equal to the given maximum value |
| [in](../apidocs/com/metreeca/spec/shapes/In.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html), …) | the focus set is a subset a given set of target values |
| [all](../apidocs/com/metreeca/spec/shapes/All.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html), …) | the focus set includes all values from a given set of target values |
| [any](../apidocs/com/metreeca/spec/shapes/Any.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html), …) | the focus set includes at least one value from a given set of target values |

Common combinations of set constraints are directly available as shorthand shapes.

| shorthand shape                          | equivalent shape                   | constraint                  |
| :--------------------------------------- | :--------------------------------- | --------------------------- |
| [required](../apidocs/com/metreeca/spec/Shape.html#required--) | `and(minCount(1), maxCount(1))`    | exactly one                 |
| [optional](../apidocs/com/metreeca/spec/Shape.html#optional—) | `maxCount(1)`                      | at most one                 |
| [repeatable](../apidocs/com/metreeca/spec/Shape.html#repeatable—) | `minCount(1)`                      | at least one                |
| [multiple](../apidocs/com/metreeca/spec/Shape.html#multiple—) | `and()`                            | any number                  |
| [only](../apidocs/com/metreeca/spec/Shape.html#only-org.eclipse.rdf4j.model.Value...-)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html), …) | `and(all(value, …), in(value, …))` | constant pre-defined values |

## Structural Constraints

Composite shapes specifying constraints to be met by a derived focus set generated by a [focus shifting operator](#shifts).

| shape                                    | constraint                               |
| :--------------------------------------- | :--------------------------------------- |
| [trait](../apidocs/com/metreeca/spec/shapes/Trait.html)([step](../apidocs/com/metreeca/spec/shifts/Step.html), [shape](../apidocs/com/metreeca/spec/Shape.html)) | the derived focus set generated by a path  *step* is consistent with a given shape |

<!-- document Virtual -->

## Logical Constraints

Composite shapes specifying logical combinations of shapes.

| shape                                    | constraint                               |
| :--------------------------------------- | :--------------------------------------- |
| [and](../apidocs/com/metreeca/spec/shapes/And.html)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | the focus set is consistent with all shapes in a given target set |
| [or](../apidocs/com/metreeca/spec/shapes/Or.html)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | the focus set is consistent with at least one shape in a given target set |
| [test](../apidocs/com/metreeca/spec/shapes/Test.html)([condition](../apidocs/com/metreeca/spec/Shape.html),<br />[positive](../apidocs/com/metreeca/spec/Shape.html), [negative](../apidocs/com/metreeca/spec/Shape.html)) | the focus set is consistent either with a *positive* shape, if consistent also with a *condition* shape, or with a *negative* shape, otherwise |
| [when](../apidocs/com/metreeca/spec/shapes/When.html)([variable](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/IRI.html), [value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html), …) | the focus set is consistent with this shape only if the value of an [externally assigned variable](../apidocs/com/metreeca/spec/probes/Redactor.html) is included in a given set of target values |

## Annotations

Non-validating shapes documenting presentation-driving metadata, to be used for purposes such as form building or predictable printing of RDF files.

| shape                                    | value                                    |
| :--------------------------------------- | :--------------------------------------- |
| [alias](../apidocs/com/metreeca/spec/shapes/Alias.html)("alias") | an alternate property name for reporting values for the enclosing shape (e.g. in the [context](idiomatic-json#term-properties) of JSON-based RDF serialization results) |
| [label](../apidocs/com/metreeca/spec/shapes/Label.html)("label") | a human-readable textual label  for the enclosing shape |
| [notes](../apidocs/com/metreeca/spec/shapes/Notes.html)("notes") | a human-readable textual description of the enclosing shape |
| [placeholder](../apidocs/com/metreeca/spec/shapes/Placeholder.html)("placeholder") | a human-readable textual placeholder for the values of the enclosing shape |
| [default](../apidocs/com/metreeca/spec/shapes/Default.html)([value](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/Value.html)) | the default for the expected values of the enclosing shape |
| [hint](../apidocs/com/metreeca/spec/shapes/Hint.html)([IRI](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/IRI.html)) | the IRI of a resource hinting at possible values for the enclosing shape (e.g. an LDP container) |
| [group](../apidocs/com/metreeca/spec/shapes/Group.html)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | multiple shapes to be grouped for presentation purposes |


# Shifts

Linked data [shifts](../apidocs/com/metreeca/spec/Shift.html) define how a derived focus set is generated from the current one.

| shift                                    | derived focus set                        |
| :--------------------------------------- | :--------------------------------------- |
| [step](../apidocs/com/metreeca/spec/shifts/Step.html)([IRI](http://docs.rdf4j.org/javadoc/latest/org/eclipse/rdf4j/model/IRI.html), inverse?) | the set of object values reachable by traversing the given direct RDF property from each term in the current focus set; if *inverse*, the set of subject terms reachable by traversing the given inverse RDF property from each term in the current focus set |

<!-- document Count -->
<!-- document Table -->

# Parameters

The combined use of conditional (`test`) and parametric (`when`) [logical](#logical-constraints) constraints supports the definition of **parametric** shapes, which specify different sets of constraints according to the current externally-assigned value of parametric **axis** variables.

Parametric axes may be specified for arbitrary custom variables, but the system relies on four pre-defined parametric variables to support fine-grained access control rules and role-dependent read/write resource views.

Common combinations of parametric shapes on these axes are directly available as shorthand shapes.

## Role Axis

Parametric shapes for the [role](../apidocs/com/metreeca/spec/Spec.html#role) axis [selectively enable](../apidocs/com/metreeca/spec/Shape.html#role-java.util.Set-) nested shapes according to the roles of the (possibly authenticated) user performing HTTP/S operations on target linked data resources.

<p class="warning">Parametric shapes for this axis will be available as soon as user authentication/authorization is integrated.</p>

## Task Axis

Parametric shapes for the [task](../apidocs/com/metreeca/spec/Spec.html#task) axis [selectively enable](../apidocs/com/metreeca/spec/Shape.html#task-org.eclipse.rdf4j.model.IRI-) nested shapes according to the method of the HTTP/S operations performed on target linked data resources.

| task                                     | shorthand                                | HTTP/S method   |                                          |
| ---------------------------------------- | ---------------------------------------- | --------------- | ---------------------------------------- |
| [create](../apidocs/com/metreeca/spec/Spec.html#create) | [create](../apidocs/com/metreeca/spec/Shape.html#create-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | POST            | resource creation                        |
| [relate](../apidocs/com/metreeca/spec/Spec.html#relate) | [relate](../apidocs/com/metreeca/spec/Shape.html#relate-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | GET             | resource retrieval                       |
| [update](../apidocs/com/metreeca/spec/Spec.html#update) | [update](../apidocs/com/metreeca/spec/Shape.html#update-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | PUT             | resource updating                        |
| [delete](../apidocs/com/metreeca/spec/Spec.html#delete) | [delete](../apidocs/com/metreeca/spec/Shape.html#delete-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | DELETE          | resouce deletion                         |
| [client](../apidocs/com/metreeca/spec/Spec.html#client) | [client](../apidocs/com/metreeca/spec/Shape.html#server-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | POST+GET+DELETE | shorthand for client-managed data, specified at creation time, but not updated afterwards |
| [server](../apidocs/com/metreeca/spec/Spec.html#server) | [server](../apidocs/com/metreeca/spec/Shape.html#server-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | GET+DELETE      | shorthand for server-managed data, neither specified at creation time, nor updated afterwards |

## View Axis

Parametric shapes for the [view](../apidocs/com/metreeca/spec/Spec.html#view) axis [selectively enable](../apidocs/com/metreeca/spec/Shape.html#view-org.eclipse.rdf4j.model.IRI-) nested shapes according to the usage context.

| view                                     | shorthand                                | usage context                            |
| ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
| [digest](../apidocs/com/metreeca/spec/Spec.html#digest) | [digest](../apidocs/com/metreeca/spec/Shape.html#digest-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | resource short description, e.g. inside search result sets |
| [detail](../apidocs/com/metreeca/spec/Spec.html#detail) | [detail](../apidocs/com/metreeca/spec/Shape.html#detail-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | full resource description                |

## Mode Axis

Parametric shapes for the [mode](../apidocs/com/metreeca/spec/Spec.html#mode) axis [selectively enable](../apidocs/com/metreeca/spec/Shape.html#mode-org.eclipse.rdf4j.model.IRI-) nested shapes according to the usage pattern.

| mode                                     | shorthand                                | usage pattern                            |
| ---------------------------------------- | ---------------------------------------- | ---------------------------------------- |
| [verify](../apidocs/com/metreeca/spec/Spec.html#verify) | [verify](../apidocs/com/metreeca/spec/Shape.html#verify-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | nested constraints are to be used only for validating incoming data and not for selecting existing resources to be processed |
| [filter](../apidocs/com/metreeca/spec/Spec.html#filter) | [filter](../apidocs/com/metreeca/spec/Shape.html#filter-com.metreeca.spec.Shape...-)([shape](../apidocs/com/metreeca/spec/Shape.html), …) | nested constraints are to be used only for selecting existing resources to be processed and not for validating incoming data |

# RDF Encoding

Linked data shapes may be stored and exchanged as RDF models, recursively encoded according to the following patterns:

```turtle
@prefix spec: <tag:com.metreeca,2016:spec/terms#>.

[] a spec:{Shape};
    spec:{property} {value};
    …
    
[] a spec:{Shift};
    spec:{property} {value};
    …
    
```

where:

- `{Shape}` is the simple uppercase name of the required [shape](../apidocs/com/metreeca/spec/shapes/package-summary) class;
- `{Shift}` is the simple uppercase name of the required [shift](../apidocs/com/metreeca/spec/shifts/package-summary) class;
- `{property}` is the lowercase name of a constructor argument for the `{Shape/Shift}` class;
- `{value}` is the value for the `{property}` constructor argument, encoded according to the following scheme.

| Java type       | RDF encoding                             |
| --------------- | ---------------------------------------- |
| `Shape`         | RDF-encoded shape                        |
| `Shift`         | RDF-encoded shift                        |
| `Collection<T>` | [RDF list](https://www.w3.org/TR/rdf-schema/#ch_list) of RDF-encoded `<T>` values |
| `IRI`           | RDF IRI reference                        |
| `Value`         | RDF IRI reference or RDF literal         |
| `String`        | `xsd:string` RDF literal                 |
| `boolean`       | `xsd:boolean` RDF literal                |
| `int`           | `xsd:integer` RDF literal                |

Shorthands for [set constraints](#set-constraints) and task/view/mode [parametric shapes](#parameters) may be directly encoded acoording to the folloing patterns:

```
@prefix spec: <tag:com.metreeca,2016:spec/terms#>.

[] a spec:{shorthand}.
[] a spec:{shorthand}; spec:values ({value}, …).
[] a spec:{shorthand}; spec:shapes ({shape}, …).
```

where:

- `{shorthand}` is the lowercase name of the shorthand factory method;
- `({value}, …)` and `({shape}, …)` are RDF lists of RDF values and RDF-encoded shapes.

For instance, applying these rules the following shape:

```java
and(required(), datatype(xsd:string))
```

will be ancoded in RDF as:

```turtle
@prefix spec: <tag:com.metreeca,2016:spec/terms#>.

[] a spec:And; spec:shapes (
    [a spec:required],
    [a spec:Datatype; spec:iri xsd:string]
).
```

<p class="note">Support for direct import of RDF-encoded SHACL specs is planned.</p>

<!-- idiomatic JSON support? => RDF list support in idiomatic JSON -->
